[tool.poetry]
name = "image-api"
version = "0.1.0"
description = ""
authors = ["Akeem King <akeemtlking@gmail.com>"]
readme = "README.md"
packages = [{include = "image_api"}]

[tool.poetry.dependencies]
python = "^3.10"
quantulum3 = "^0.8.1"
flask = "^2.2.2"
flask-cors = "^3.0.10"
pillow = "^9.4.0"
pytesseract = "^0.3.10"
numpy = "^1.24.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
